fixed errors not showing up on auth failures

--- a/client/src/components/pages/Auth/Auth.module.scss
+++ b/client/src/components/pages/Auth/Auth.module.scss
@@ -15,6 +15,11 @@
     text-decoration: none;
 }
 
+.Auth p {
+    padding: 0!important;
+    margin-bottom: 0;
+}
+
 
 .AuthInput {
     color: rgb(255, 255, 255) !important;   
